--- a/css/style.css
+++ b/css/style.css
@@ -1,42 +1,66 @@
 * {
-    font-family: "Fraunces", serif;
     color: #fff;
 }
 
 body {
     margin: 0;
-    background-color: #224870;
-}
-
-.container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
+    background: #FFC107;
+    display: grid;
+    place-items: center;
     height: 100vh;
 }
 
-.calculadora {
+#calculator {
+    background-color: #607D8B;
     display: grid;
-    grid-template-columns: repeat(4, 75px);
-    grid-template-rows: 160px repeat(5, 75px);
-    background-color: #00916e;
-    padding: 15px;
-    border-radius: 32px;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
+    width: 350px;
+    max-width: 100%;
+    padding: 1.5rem;
+    border-radius: 1rem;
     box-shadow: 15px 10px 0px 5px #00000033;
 }
 
-button{
+.pantalla {
+    grid-column: 1 / 5;
+    background-color: #363636;
+    padding: 1.5rem;
+    font-size: 2rem;
+    text-align: right;
+    border-radius: .5rem;
+    margin-bottom: 1rem;
+    font-weight: 500px;
+}
+
+.btn {
     cursor: pointer;
-    margin: 5px;
-    padding: 0;
-    border-radius: 32px;
-    font-size: 1.5em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1.5rem .5rem;
     border: none;
-    background-color: #00916e;
-    box-shadow: 5px 5px 10px -3px #00000040, -5px -5px 15px 3px #00ffc11f;
+    border-radius: .5rem;
+    background-color: rgb(13, 23, 42);
+    box-shadow: -1px 1px 30px -5px rgba(0, 0, 0, 0.2);
 
 }
 
-button:active{
-    background-color: #006f54;
+button:active {
+    background-color: #4e5251;
+    transform: scale(1.05);
+}
+
+#cero {
+    grid-column: span 2;
+}
+
+#igual {
+    grid-row: span 2;
+    background-color: #e6394a;
+}
+
+#igual:hover {
+    background-color: #e657e6;
 }
