Se realiza cambio de simulador de presupuesto por simulador de prestamos, restaria darle mas diseño

--- a/css/style.css
+++ b/css/style.css
@@ -49,3 +49,9 @@ button:hover {
 #result {
     font-size: 18px;
 }
+
+.error-message{
+    display: none;
+    color: #f00;
+    margin-top: 10px;
+}
