--- a/css/style.css
+++ b/css/style.css
@@ -11,47 +11,60 @@ body {
 
 .container {
     background-color: #fff;
-    padding: 26px;
+    padding: 30px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-width: 400px;
+    width: 100%;
 }
+
+h1 {
+    text-align: center;
+}
+
+#inputs {
+    margin-bottom: 15px;
+}
+
 
 label {
     display: block;
-    margin-bottom: 8px;
+    margin-bottom: 5px;
 }
 
-input {
+input[type = "number"],
+input[type= "text"],
+button {
     width: 100%;
-    padding: 8px;
-    margin-bottom: 16px;
+    padding: 10x;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-bottom: 10px;
 }
 
 button {
     background-color: #4caf50;
     color: #fff;
-    padding: 10px;
-    border: none;
-    border-radius: 4px;
     cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 
 button:hover {
     background-color: #45a049;
 }
 
-#result-container {
-    margin-top: 20px;
-    border-top: 2px solid #ccc;
-    padding-top: 20px;
-}
-
 #result {
-    font-size: 18px;
+    font-weight: bold;
+    margin-top: 10px;
+    padding: 10px;
+    background-color: #dff0d8;
+    border: 1px solid #c8e5bc;
+    border-radius: 4px;
 }
 
 .error-message{
     display: none;
-    color: #f00;
-    margin-top: 10px;
+    color: #f44336;
+    margin-bottom: 10px;
 }
